Added zine page and index. Added desc and image link fields to issues and zines

--- a/zines/templates/zines/base.html
+++ b/zines/templates/zines/base.html
@@ -28,10 +28,10 @@
         <div id="header">
             <div id="logo">
                 <a href="/zines">
-                    <i class="material-icons md-40">subtitles</i>web<span>zine </span>
+                    <i class="material-icons md-40">subtitles</i>end<span>zine </span>
                 </a>
             </div>
-            <ul class="menu">
+            <ul class="menu inline">
                 <li>
                     <a href="{% url 'user' 1 %}">profile</a>
                 </li>
