--- a/zines/static/zines/style.css
+++ b/zines/static/zines/style.css
@@ -10,6 +10,14 @@ i {
     position: relative;
     bottom: -.25em;
 }
+ul.inline {
+    display: inline-block;
+    padding: 0;
+    list-style-type: none;
+}
+ul.inline li {
+    display: inline-block;
+}
 #wrapper {
     width: 100%;
     max-width: 60rem;
@@ -33,12 +41,13 @@ i {
     color: inherit;
 }
 #header ul {
-    display: inline-block;
+    font-size: 1.2rem;
     margin-left: 1em;
     padding: 0;
     color: #000;
     font-weight: 100;
     list-style-type: none;
+    text-transform: uppercase;
 }
 #header li {
     display: inline-block;
@@ -77,10 +86,55 @@ date {
 #works tr:nth-child(2n) {
     background: #eee;
 }
-
+.authors ul li:not(:last-child):after {
+    content: ',';
+    margin-left: -3px;
+    padding: 0;
+}
+.issue {
+    background-color: #000;
+    padding: 0;
+    width: 100%;
+    height: 200px;
+}
+.issue .bg {
+    position: absolute;
+    width: 60rem;
+    opacity: .4;
+    background-position: center;
+    background-size: cover;
+    height: 200px;
+}
+.issue .title {
+    position: relative;
+    top: 0;
+    left: 0;
+    color: #fff;
+    padding: 2rem 0;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 35px;
+    font-weight: 100;
+    transition: .15s;
+}
+.issue .title a {
+    color: inherit;
+}
+.issue .title:hover {
+    background: rgba(255, 255, 255, .2);
+}
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-40 { font-size: 40px; }
 .material-icons.md-48 { font-size: 48px; }
 .material-icons.md-60 { font-size: 60px; }
+
+.clearfix {
+    clear: both;
+}
