--- a/zines/templates/zines/index.html
+++ b/zines/templates/zines/index.html
@@ -1,20 +1,17 @@
 {% extends 'zines/base.html' %}
 
 {% block title %}
-    {{ zine }}
+    welcome
 {% endblock %}
 
 {% block body %}
-    <h1>{{ zine.title }}</h1>
-    <date>published since {{ zine.start_date|date:'b j, Y' }}</date>
-    <div class="authors">
-        Authors: {{ zine.authorsLink|safe }}
-    </div>
+    <h1>welcome</h1>
     <hr/>
-    {% if issues %}
-        {% for issue in issues %}
+    {% if recent_issues %}
+        <h3>Recent Issues</h3>
+        {% for issue in recent_issues %}
             <div class="issue">
-                <div class="bg" style="background-image: url({{ zine.zine_pic }})">
+                <div class="bg" style="background-image: url({% if issue.cover != '' %}{{ issue.cover }}{% else %}{{ issue.zine.zine_pic }}{% endif %})">
                     &nbsp;
                 </div>
                 <a href="">
@@ -24,7 +21,5 @@
                 </a>
             </div>
         {% endfor %}
-    {% else %}
-        <p>This zine has not published any issues.</p> 
     {% endif %}
 {% endblock %}
