--- a/zines/templates/zines/zine.html
+++ b/zines/templates/zines/zine.html
@@ -14,7 +14,7 @@
     {% if issues %}
         {% for issue in issues %}
             <div class="issue">
-                <div class="bg" style="background-image: url({{ zine.zine_pic }})">
+                <div class="bg" style="background-image: url({% if issue.cover != '' %}{{ issue.cover }}{% else %}{{ issue.zine.zine_pic }}{% endif %})">
                     &nbsp;
                 </div>
                 <a href="">
