--- a/zines/templates/zines/zine.html
+++ b/zines/templates/zines/zine.html
@@ -31,7 +31,7 @@
     {% if issues %}
         {% for issue in issues %}
             <div class="issue">
-                <div class="bg" style="background-image: url(/static/zines/uploads/{% if issue.cover != '' %}{{ issue.cover }}{% else %}{{ issue.zine.zine_pic }}{% endif %})">
+                <div class="bg" style="background-image: url({% if issue.cover != '' %}{{ issue.cover.url }}{% else %}{{ issue.zine.zine_pic }}{% endif %})">
                     &nbsp;
                 </div>
                 <a href="{% url 'issue' zine.id issue.number %}">
