--- a/zines/templates/zines/index.html
+++ b/zines/templates/zines/index.html
@@ -11,7 +11,7 @@
         <h3>Recent Issues</h3>
         {% for issue in recent_issues %}
             <div class="issue">
-                <div class="bg" style="background-image: url({% if issue.cover != '' %}{{ issue.cover }}{% else %}{{ issue.zine.zine_pic }}{% endif %})">
+                <div class="bg" style="background-image: url({% if issue.cover != '' %}{{ issue.cover.url }}{% else %}{{ issue.zine.zine_pic }}{% endif %})">
                     &nbsp;
                 </div>
                 <a href="{% url 'issue' issue.zine.id issue.number %}">
