changed user to profile, extended user and created a 1-to-1 link between the two. need to recreate superuser

--- a/zines/templates/zines/base.html
+++ b/zines/templates/zines/base.html
@@ -35,6 +35,11 @@
                 <li>
                     <a href="{% url 'index' %}">home</a>
                 </li>
+                {% if user.is_authenticated %}
+                    <li>
+                        <a href="{% url 'profile' user.user_profile.id %}">profile</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
             {% block body %} {% endblock %}
