--- a/zines/templates/zines/index.html
+++ b/zines/templates/zines/index.html
@@ -26,8 +26,8 @@
         <div class="large-4 columns">
             <h3>New Users</h3>
             <ul>
-                {% for user in new_users %}
-                    <li>{{ user.link|safe }}</li>
+                {% for profile in new_users %}
+                    <li>{{ profile.link|safe }}</li>
                 {% endfor %}
             </ul>
         </div>
