--- a/zines/templates/zines/base.html
+++ b/zines/templates/zines/base.html
@@ -22,6 +22,10 @@
         
         <!-- material icons -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+        <!-- lightbox -->
+        <link href="{% static 'zines/lightbox2-master/src/css/lightbox.css' %}" rel="stylesheet">
+        <script src="{% static 'zines/lightbox2-master/src/js/lightbox.js' %}"></script>
     </head>
     <body>
         <div id="wrapper">
@@ -37,7 +41,7 @@
                 </li>
                 {% if user.is_authenticated %}
                     <li>
-                        <a href="{% url 'profile' user.user_profile.id %}">profile</a>
+                        <a href="{% url 'profile' user.profile.id %}">profile</a>
                     </li>
                 {% endif %}
             </ul>
