--- a/zines/static/zines/style.css
+++ b/zines/static/zines/style.css
@@ -141,8 +141,14 @@ td date {
     width: auto;
 }
 .desc .cover {
-    padding-left: 0;
-    padding-bottom: 1.25em;
+    padding: 0;
+    margin: 0 1rem 1rem 0;
+    background: #fafafa;
+    font-size: 1.1em;
+}
+.desc .cover p {
+    margin: .5em 0;
+    line-height: 1;
 }
 .info a {
     color: #bbb;
@@ -176,14 +182,17 @@ td date {
     margin: 1.5rem 0;
 }
 .issue {
+    z-index: -1;
     background-color: #333;
     padding: 0;
     width: 100%;
     height: 200px;
 }
 .issue .bg {
-    position: absolute;
-    width: 60rem;
+    position: relative;
+    top: 0;
+    z-index: 0;
+    width: 100%;
     opacity: .4;
     background-position: center;
     background-size: cover;
@@ -191,7 +200,8 @@ td date {
 }
 .issue .title {
     position: relative;
-    top: 0;
+    z-index: 3000;
+    top: -200px;
     left: 0;
     color: #fff;
     padding: 2rem 0;
@@ -254,14 +264,46 @@ input.heading {
     font-weight: bold !important;
 }
 label {
-    display: block !important;
+    display: block;
 }
-#id_end_date_month,
-#id_end_date_day,
-#id_end_date_year,
-#id_start_date_month,
-#id_start_date_day,
-#id_start_date_year {
-    width: 33%;
+
+div#id_end_date_month,
+div#id_start_date_month {
+    width: 49.5%;
     display: inline-block;
+}
+select#id_end_date_month,
+select#id_end_date_day,
+select#id_end_date_year,
+select#id_start_date_month,
+select#id_start_date_day,
+select#id_start_date_year {
+    width: 31%;
+    display: inline-block;
+}
+div#id_show_author,
+div#id_external,
+div#id_submissions_open {
+    display: inline-block;
+    width: 31%;
+}
+label[for=id_show_author],
+label[for=id_external],
+label[for=id_submissions_open] {
+    display: inline;
+    margin-right: 1rem;
+}
+body.home .issue,
+body.home .issue .bg,
+body.home .issue .title {
+    height: 130px;
+}
+body.home .issue .title {
+    top: -130px;
+}
+img.preview {
+    width: 100px;
+    height: auto;
+    float: left;
+    margin: 0 1rem 1rem 0;
 }
